2007-03-02  Ray Strode  <rstrode@redhat.com>

	* gconf/gconf-value.c (gconf_value_new_from_string):
	Check that type isn't a container type, since there
	would be no way to know what the type of its elements
	would be.  Based on patch from 
	Kjartan Maraas <kmaraas@gnome.org> (bug 309016).

============================= 2.16.1 ======================

2007-01-30  Kjartan Maraas  <kmaraas@gnome.org>

	* backends/evoldap-backend.c: (subst_variables): Fix a couple
	compiler warnings.

2007-01-25  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf/gconf-client.c: (gconf_client_get_float),
	(gconf_client_get_int), (gconf_client_get_string),
	(gconf_client_get_bool), (gconf_client_get_schema),
	(gconf_client_get_list), (gconf_client_get_pair):
	Fix up the error handling again. Noticed by Richard Hult.
	Closes bug #360224 for good.

2007-01-24  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Bump version so we differ from the last released
	tarball.

2007-01-04  Tom Tromey  <tromey@redhat.com>

	* gconf/gconf-internals.c (gconf_activate_server): Close write end
	of pipe in parent process.  Bug #365416.

2006-11-23  Pascal Terjan  <pterjan@linuxfr.org>

	* backends/evoldap-backend.c: Fix small leak (#345297, coverity #2742)

2006-10-07  Matthias Clasen <mclasen@redhat.com>

	* gconf/gconf-client.c: Fix error handling in the
	getters.  (#102050, #360224)

============================= 2.16.0 ======================

2006-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Fix intltool req.

2006-08-08  Kjartan Maraas  <kmaraas@gnome.org>

	* doc/gconftool-2.1: Add missing newline (Loïc Minier,
	Jan Kratochvil) Closes bug #304143.

2006-08-07  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Don't link to libpopt. (#336307)
	Patch from William Jon McCann.

2006-06-14  Michael Meeks  <michael.meeks@novell.com>

	* gconf/GConfX.idl: declare that we raise the
	exception we raise - fixes debug issue in sabayon &
	kills syslog spew: